--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <section id="graph"></section>
   </main>
   <script src="d3.js"></script>
+	<script src="cola.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
