--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main>
-    <section id="graph"></section>
-  </main>
   <script src="d3.js"></script>
 	<script src="cola.js"></script>
   <script src="main.js"></script>
+  <script src="tem_data.js"></script>
+  <script src="carte.js"></script>
 </body>
 </html>
