[à cleaner] fonctionnalité mise en avant objets associés ou thème

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<script src="cola.js"></script>
   <script src="main.js"></script>
   <script src="tem_data.js"></script>
+  <script src="network.js"></script>
   <script src="interactions.js"></script>
   <script src="carte.js"></script>
 </body>
