séparation struc. html et js carto. + corrections js

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 <body>
   <script src="d3.js"></script>
 	<script src="cola.js"></script>
-  <script src="main.js"></script>
+  <script src="html.js"></script>
   <script src="tem_data.js"></script>
   <script src="network.js"></script>
   <script src="interactions.js"></script>
   <script src="carte.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
