--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <script src="html.js"></script>
   <script src="tem_data.js"></script>
   <script src="network.js"></script>
+  <script src="infobulle.js"></script>
   <script src="interactions.js"></script>
   <script src="carte.js"></script>
   <script src="main.js"></script>
