--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <script src="network.js"></script>
   <script src="infobulle.js"></script>
   <script src="interactions.js"></script>
+  <script src="shapes.js"></script>
   <script src="carte.js"></script>
   <script src="main.js"></script>
 </body>
